--- a/templates/index.html
+++ b/templates/index.html
@@ -848,7 +848,7 @@
                 document.getElementById('diseaseSummary').innerHTML = ''; // Clear the summary content
             });
 
-            const apiKey = '9db504a15e9f479190895d64b8d76359';
+            const apiKey = '#your api#';
             const url = `https://newsapi.org/v2/top-headlines?category=health&apiKey=${apiKey}`;
             const newsGrid = document.getElementById('news-grid');
             const nextPageButton = document.getElementById('next-page');
